// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.

/*
 * combined Query hint definition
* all hints represented as a tree or forest structure
 * there are two types of node on each tree:
 * -- join node
 * -- access node
 */
syntax = "proto3";
package kwbase.roachpb;
option go_package = "roachpb";
/*
* Query hint tree
* may include a tree or forest structure
*/
message Query_hint_tree {
  repeated Join_node root_join_node = 1;
  repeated Access_node root_access_node = 2;
}

/*
* Join node
* have two child nodes, every child node could be a join node or an access node.
*/
message Join_node {
  oneof left_side {
    Join_node left_join_node = 1;
    Access_node left_access_node = 2;
  }
  oneof right_side {
    Join_node right_join_node = 3;
    Access_node right_access_node = 4;
  }
  bool real_join_order = 5;
  Join_type join_method = 6;
  double cardinality = 7;
  string index_name = 8;
  bool leading_table = 9;
  enum Join_type{
    NO_JOIN_HINT = 0;
    USE_LOOKUP = 1;
    DISALLOW_LOOKUP = 2;
    FORCE_LOOKUP = 3;
    USE_MERGE = 4;
    DISALLOW_MERGE = 5;
    FORCE_MERGE = 6;
    USE_HASH = 7;
    DISALLOW_HASH = 8;
    FORCE_HASH = 9;
  }
}
/*
* Access node
*/
message Access_node {
  string table_name = 1;
  Access_type access_method = 2;
  double cardinality = 3;
  repeated string index_name = 4;
  bool leading_table = 5;
  enum Access_type{
    NO_ACCESS_HINT = 0;
    USE_TABLE_SCAN = 1;
    IGNORE_TABLE_SCAN = 2;
    FORCE_TABLE_SCAN = 3;
    USE_INDEX_SCAN = 4;
    IGNORE_INDEX_SCAN = 5;
    FORCE_INDEX_SCAN = 6;
    USE_INDEX_ONLY = 7;
    IGNORE_INDEX_ONLY = 8;
    FORCE_INDEX_ONLY = 9;
  }
}
