// Copyright 2015 The Cockroach Authors.
// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.

syntax = "proto2";
package kwbase.sql.sqlbase;
option go_package = "sqlbase";

import "gogoproto/gogo.proto";

// UserPrivileges describes the list of privileges available for a given user.
message UserPrivileges {
  option (gogoproto.equal) = true;
  optional string user = 1 [(gogoproto.nullable) = false];
  // privileges is a bitfield of 1<<Privilege values.
  optional uint32 privileges = 2 [(gogoproto.nullable) = false];
}

// PrivilegeDescriptor describes a list of users and attached
// privileges. The list should be sorted by user for fast access.
message PrivilegeDescriptor {
  option (gogoproto.equal) = true;
  repeated UserPrivileges users = 1 [(gogoproto.nullable) = false];
}
